--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>RTC App</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" style="width: 100%;;"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
