change html title

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="apple-mobile-web-app-title" content="RTC App" />
     <link rel="apple-touch-icon" href="/icon-192x192.png" />
     <link rel="manifest" href="/manifest.json" />
-    <title>RTC App</title>
+    <title>Ally Beacon</title>
   </head>
   <body>
     <div id="root" style="width: 100%;;"></div>
